# titanium_mobile_windows

./: .clang-format  .eslintrc  .gitignore  .gitmodules  .travis.yml  Jenkinsfile  README.md  cpp_editor.vssettings  cpplint.cfg  greenkeeper.json  package-lock.json  package.json
Examples/Corporate/: CMakeLists.txt
Examples/Issue34/: CMakeLists.txt
Examples/Issue34/src/: Package.store.appxmanifest.in
Examples/Mocha/: CMakeLists.txt
Examples/Mocha/Assets/: accelerometer.js  blob.js  database.js  email.js  gesture.js  imageview.js  should.js  ti-mocha.js  ti.filesystem.test.js  ti.geolocation.js  ti.platform.test.js  ti.test.js  ti.ui.label.test.js  ti.ui.layout.js  ti.ui.progressbar.test.js  webview.js
Examples/Mocha/src/: Main.cpp  Package.wp.appxmanifest.in
Examples/Movies/: CMakeLists.txt
Examples/Movies/src/: OutputDebugStringBuf.hpp  Package.wp.appxmanifest.in
Examples/NG/: CMakeLists.txt
Examples/NG/Native/: CMakeLists.txt
Examples/NG/TitaniumWindows_Hyperloop/: TitaniumWindows_Hyperloop.csproj  TitaniumWindows_Hyperloop.sln  TypeHelper.cs
Examples/NG/src/: OutputDebugStringBuf.hpp  Package.store.appxmanifest.in  main.cpp
Examples/NMocha/: CMakeLists.txt
Examples/NMocha/include/: OutputDebugStringBuf.hpp
Examples/NMocha/src/: OutputDebugStringBuf.hpp  Package.store.appxmanifest.in  Package.wp.appxmanifest.in  main.cpp
Examples/Pedro/: CMakeLists.txt
Examples/Pedro/Assets/: app.js  foo.js
Examples/Pedro/cmake/: Package.wp.appxmanifest.in
Examples/RSSReader/: CMakeLists.txt
Examples/RSSReader/src/: Package.store.appxmanifest.in  Package.win10.appxmanifest.in
Examples/Russ/: CMakeLists.txt
Examples/Russ/cmake/: Package.store.appxmanifest.in  Package.wp.appxmanifest.in
Examples/Russ/src/: Main.cpp  app.js
Examples/kitchensink-v2/: CMakeLists.txt
Examples/kitchensink-v2/src/: Package.phone.appxmanifest.in  Package.store.appxmanifest.in  Package.win10.appxmanifest.in  Package.wp.appxmanifest.in  main.cpp
Source/: CMakeLists.txt
Source/API/: CMakeLists.txt  build_and_test.sh
Source/API/cmake/: TitaniumWindows_API_Config.cmake
Source/API/src/: API.cpp
Source/API/test/: CMakeLists.txt
Source/Accelerometer/: CMakeLists.txt  build_and_test.sh
Source/Accelerometer/cmake/: TitaniumWindows_Accelerometer_Config.cmake
Source/Accelerometer/src/: Accelerometer.cpp
Source/App/: CMakeLists.txt  build_and_test.sh
Source/App/cmake/: TitaniumWindows_App_Config.cmake
Source/App/src/: App.cpp  Properties.cpp
Source/App/test/: CMakeLists.txt
Source/Blob/: CMakeLists.txt  build_and_test.sh
Source/Blob/cmake/: TitaniumWindows_Blob_Config.cmake
Source/Blob/src/: Blob.cpp
Source/Filesystem/: CMakeLists.txt  build_and_test.sh
Source/Filesystem/cmake/: TitaniumWindows_Filesystem_Config.cmake
Source/Filesystem/src/: File.cpp  Filesystem.cpp  TitaniumEntryPoint.cpp
Source/Gesture/: CMakeLists.txt  build_and_test.sh
Source/Gesture/cmake/: TitaniumWindows_Gesture_Config.cmake
Source/Gesture/src/: Gesture.cpp  ShakeGestureHelper.cpp
Source/Global/: CMakeLists.txt  build_and_test.sh
Source/Global/cmake/: TitaniumWindows_Global_Config.cmake
Source/Global/src/: GlobalObject.cpp  GlobalString.cpp  NativeModuleLoader.cpp  TitaniumEntryPoint.cpp  stdafx.h
Source/JavaScriptCoreCPP/: build_and_test.sh
Source/JavaScriptCoreWRT/: CMakeLists.txt  build_and_test.sh
Source/JavaScriptCoreWRT/cmake/: FindJavaScriptCore.cmake  JavaScriptCoreWRTConfig.cmake  internal_utils.cmake  internal_utils_xcode.cmake
Source/JavaScriptCoreWRT/include/: JS.h
Source/JavaScriptCoreWRT/src/: JS.cpp
Source/LayoutEngine/: CMakeLists.txt  README.md  build_and_test.sh
Source/LayoutEngine/cmake/: FindJavaScriptCore.cmake  IsWin32.cmake  LayoutEngineConfig.cmake  internal_utils.cmake  internal_utils_xcode.cmake
Source/LayoutEngine/examples/: CMakeLists.txt  Main.cpp
Source/LayoutEngine/src/: Common.cpp  Composite.cpp  Element.cpp  Horizontal.cpp  Node.cpp  ParseProperty.cpp  Vertical.cpp  stdafx.h
Source/LayoutEngine/test/: CMakeLists.txt  CompositeLayoutTest.cpp  HorizontaLayoutTest.cpp  PropertyParserTest.cpp
Source/Map/: CMakeLists.txt  build_and_test.sh
Source/Map/cmake/: TitaniumWindows_Map_Config.cmake
Source/Map/src/: Annotation.cpp  Map.cpp  TitaniumEntryPoint.cpp  View.cpp  stdafx.h
Source/Map/test/: CMakeLists.txt
Source/Media/: CMakeLists.txt  build_and_test.sh
Source/Media/cmake/: TitaniumWindows_Media_Config.cmake
Source/Media/src/: Media.cpp  TitaniumEntryPoint.cpp  stdafx.h
Source/NativeProxyComponent/: NativeProxyComponent.sln
Source/NativeProxyComponent/NativeProxyComponent/: DynamicLoader.cs  NativeProxyComponent.csproj
Source/Network/: CMakeLists.txt  build_and_test.sh
Source/Network/cmake/: TitaniumWindows_Network_Config.cmake
Source/Network/src/: HTTPClient.cpp  Network.cpp  TitaniumEntryPoint.cpp  stdafx.h
Source/Platform/: CMakeLists.txt  build_and_test.sh
Source/Platform/cmake/: TitaniumWindows_Platform_Config.cmake
Source/Platform/src/: DisplayCaps.cpp  Platform.cpp
Source/Platform/test/: CMakeLists.txt
Source/Sensors/: CMakeLists.txt  build_and_test.sh
Source/Sensors/cmake/: TitaniumWindows_Sensors_Config.cmake
Source/Sensors/src/: Accelerometer.cpp  (+5 more)
Source/Ti/: CMakeLists.txt  build_and_test.sh
Source/Titanium/: CMakeLists.txt  build_and_test.sh
Source/TitaniumKit/: CMakeLists.txt  build_and_test.sh
Source/TitaniumPedro/: App.cpp  App.h  CMakeLists.txt  TiCore.h
Source/TitaniumRuss/: CMakeLists.txt  TiApp.cpp  TiApp.h
Source/UI/: CMakeLists.txt  build_and_test.sh
Source/Util/: CMakeLists.txt  build_and_test.sh
Source/Utility/: CMakeLists.txt  build_and_test.sh
Source/Utils/: CMakeLists.txt  build_and_test.sh
Source/WindowsRuntimeComponent3/: WindowsRuntimeComponent3.sln
Source/cmake/: FindJavaScriptCore.cmake  FindLog4cxx.cmake  FindSQLite.cmake  GenerateCPPHeaderFile.cmake  IsWin32.cmake  file2int.js  internal_utils.cmake  internal_utils_xcode.cmake  precompiled_header.cmake
test/TiCoreTests/: CMakeLists.txt  TiCoreTests.cpp  build_and_test_windows.sh
(+1762 files in other folders)
